--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^5.5 || ^7.0",
-        "zendframework/zend-http": "^2.5"
+        "zendframework/zend-http": "^2.5",
+        "zendframework/zend-json": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
