--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "mobileia/auth",
     "description": "Simple library for MobileIA Users",
+    "version": "0.0.1",
     "minimum-stability": "dev",
     "license": "MIT",
     "authors": [
