--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
             "homepage": "http://www.mobileia.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/MobileIA/authentication"
+        }
+    ],
     "require": {
         "php": "^5.5 || ^7.0",
         "zendframework/zend-http": "^2.5",
